# web/openapi.yaml
@@ -196,6 +196,204 @@ components:
         - platforms
         - label_scope
       type: object
+    Configuration:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/api/schemas/Configuration.json
+          format: uri
+          readOnly: true
+          type: string
+        allowed_path_regex:
+          type: string
+        batch_size:
+          format: int64
+          type: integer
+        blocked_path_regex:
+          type: string
+        client_mode:
+          type: string
+        created_at:
+          format: date-time
+          type: string
+        enable_all_event_upload:
+          type: boolean
+        enable_bundles:
+          type: boolean
+        enable_transitive_rules:
+          type: boolean
+        encrypted_removable_media_action:
+          type: string
+        encrypted_removable_media_remount_flags:
+          items:
+            type: string
+          type:
+            - array
+            - "null"
+        event_detail_text:
+          type: string
+        event_detail_url:
+          type: string
+        full_sync_interval_seconds:
+          format: int64
+          type: integer
+        id:
+          format: int64
+          type: integer
+        label_ids:
+          items:
+            format: int64
+            type: integer
+          type:
+            - array
+            - "null"
+        name:
+          type: string
+        position:
+          format: int64
+          type: integer
+        removable_media_action:
+          type: string
+        removable_media_remount_flags:
+          items:
+            type: string
+          type:
+            - array
+            - "null"
+        updated_at:
+          format: date-time
+          type: string
+      required:
+        - id
+        - name
+        - position
+        - client_mode
+        - label_ids
+        - created_at
+        - updated_at
+      type: object
+    ConfigurationCreate:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/api/schemas/ConfigurationCreate.json
+          format: uri
+          readOnly: true
+          type: string
+        allowed_path_regex:
+          type: string
+        batch_size:
+          format: int64
+          type: integer
+        blocked_path_regex:
+          type: string
+        client_mode:
+          type: string
+        enable_all_event_upload:
+          type: boolean
+        enable_bundles:
+          type: boolean
+        enable_transitive_rules:
+          type: boolean
+        encrypted_removable_media_action:
+          type: string
+        encrypted_removable_media_remount_flags:
+          items:
+            type: string
+          type:
+            - array
+            - "null"
+        event_detail_text:
+          type: string
+        event_detail_url:
+          type: string
+        full_sync_interval_seconds:
+          format: int64
+          type: integer
+        label_ids:
+          items:
+            format: int64
+            type: integer
+          type:
+            - array
+            - "null"
+        name:
+          type: string
+        removable_media_action:
+          type: string
+        removable_media_remount_flags:
+          items:
+            type: string
+          type:
+            - array
+            - "null"
+      required:
+        - name
+      type: object
+    ConfigurationUpdate:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/api/schemas/ConfigurationUpdate.json
+          format: uri
+          readOnly: true
+          type: string
+        allowed_path_regex:
+          type: string
+        batch_size:
+          format: int64
+          type: integer
+        blocked_path_regex:
+          type: string
+        client_mode:
+          type: string
+        enable_all_event_upload:
+          type: boolean
+        enable_bundles:
+          type: boolean
+        enable_transitive_rules:
+          type: boolean
+        encrypted_removable_media_action:
+          type: string
+        encrypted_removable_media_remount_flags:
+          items:
+            type: string
+          type:
+            - array
+            - "null"
+        event_detail_text:
+          type: string
+        event_detail_url:
+          type: string
+        full_sync_interval_seconds:
+          format: int64
+          type: integer
+        label_ids:
+          items:
+            format: int64
+            type: integer
+          type:
+            - array
+            - "null"
+        name:
+          type: string
+        removable_media_action:
+          type: string
+        removable_media_remount_flags:
+          items:
+            type: string
+          type:
+            - array
+            - "null"
+      required:
+        - name
+      type: object
     CreatedSyncToken:
       additionalProperties: false
       properties:
@@ -1210,6 +1408,29 @@ components:
         - items
         - count
       type: object
+    PaginatedBodyConfiguration:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/api/schemas/PaginatedBodyConfiguration.json
+          format: uri
+          readOnly: true
+          type: string
+        count:
+          format: int64
+          type: integer
+        items:
+          items:
+            $ref: "#/components/schemas/Configuration"
+          type:
+            - array
+            - "null"
+      required:
+        - items
+        - count
+      type: object
     PaginatedBodyHost:
       additionalProperties: false
       properties:
@@ -1706,6 +1927,26 @@ components:
         name:
           type: string
       type: object
+    SantaConfigurationReorderBody:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/api/schemas/SantaConfigurationReorderBody.json
+          format: uri
+          readOnly: true
+          type: string
+        ordered_ids:
+          items:
+            format: int64
+            type: integer
+          type:
+            - array
+            - "null"
+      required:
+        - ordered_ids
+      type: object
     SantaRuleReorderIncludesBody:
       additionalProperties: false
       properties:
@@ -1957,7 +2198,7 @@ info:
   license:
     name: Apache-2.0
   title: Woodstar API
-  version: 5bc1347-dirty
+  version: 776987c-dirty
 openapi: 3.1.0
 paths:
   /api/account:
@@ -3882,6 +4123,329 @@ paths:
       summary: List latest snapshots for a report
       tags:
         - Reports
+  /api/santa/configurations:
+    get:
+      operationId: list-santa-configurations
+      parameters:
+        - explode: false
+          in: query
+          name: q
+          schema:
+            type: string
+        - explode: false
+          in: query
+          name: page
+          schema:
+            format: int64
+            type: integer
+        - explode: false
+          in: query
+          name: per_page
+          schema:
+            format: int64
+            type: integer
+        - explode: false
+          in: query
+          name: order_key
+          schema:
+            type: string
+        - explode: false
+          in: query
+          name: order_direction
+          schema:
+            type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PaginatedBodyConfiguration"
+          description: OK
+        "401":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unauthorized
+        "403":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Forbidden
+        "422":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unprocessable Entity
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Internal Server Error
+      summary: List Santa configurations
+      tags:
+        - Santa
+    post:
+      operationId: create-santa-configuration
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ConfigurationCreate"
+        required: true
+      responses:
+        "201":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Configuration"
+          description: Created
+        "400":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Bad Request
+        "401":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unauthorized
+        "403":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Forbidden
+        "409":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Conflict
+        "422":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unprocessable Entity
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Internal Server Error
+      summary: Create a Santa configuration
+      tags:
+        - Santa
+  /api/santa/configurations/order:
+    put:
+      operationId: reorder-santa-configurations
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/SantaConfigurationReorderBody"
+        required: true
+      responses:
+        "204":
+          description: No Content
+        "400":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Bad Request
+        "401":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unauthorized
+        "403":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Forbidden
+        "422":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unprocessable Entity
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Internal Server Error
+      summary: Reorder Santa configurations
+      tags:
+        - Santa
+  /api/santa/configurations/{id}:
+    delete:
+      operationId: delete-santa-configuration
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: No Content
+        "401":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unauthorized
+        "403":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Forbidden
+        "404":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Not Found
+        "422":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unprocessable Entity
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Internal Server Error
+      summary: Delete a Santa configuration
+      tags:
+        - Santa
+    get:
+      operationId: get-santa-configuration
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Configuration"
+          description: OK
+        "401":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unauthorized
+        "403":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Forbidden
+        "404":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Not Found
+        "422":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unprocessable Entity
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Internal Server Error
+      summary: Get a Santa configuration
+      tags:
+        - Santa
+    patch:
+      operationId: update-santa-configuration
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ConfigurationUpdate"
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Configuration"
+          description: OK
+        "400":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Bad Request
+        "401":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unauthorized
+        "403":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Forbidden
+        "404":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Not Found
+        "409":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Conflict
+        "422":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unprocessable Entity
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Internal Server Error
+      summary: Update a Santa configuration
+      tags:
+        - Santa
   /api/santa/rules:
     get:
       operationId: list-santa-rules
